# Research-Internship-Finding-an-optimal-dissimilarity-measure-for-hierarchical-segmentation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ATlib/: CMakeLists.txt  EdgeQueue.cpp  EdgeQueue.h  alpha-tree.cpp  alpha-tree.h  alphaGen.cpp  alphaGen.h  at-fitness.cpp  at-fitness.h  simulation.cpp  simulation.h  support.cpp  support.h
MOEParameterOpt/: example_env  run_CDL.py  run_difference.py  run_gabor.py  run_wilkinson.py  start.sh  support.py
